Navbar update on URL change added

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="app">
 
         <nav class="nav">
-          <ul>
+          <ul class="nav-list">
             <li><a href="/movies" class="nav__link" data-link>Movies</a></li>
             <li><a href="/series" class="nav__link" data-link>Series</a></li>
 
